--- a/setup.cfg
+++ b/setup.cfg
@@ -1,3 +1,9 @@
 [pep8]
 ignore = E133,E226,E228,N802,N803
 max-line-length = 110
+
+[flake8]
+max-line-length = 110
+max-doc-length = 79
+ignore = E133, E226, E228, N802, N803, N806, N812, N815, N816, W503
+exclude = __init__.py
