--- a/admin/tools/docker/replication/container/tools/Dockerfile.ncsa
+++ b/admin/tools/docker/replication/container/tools/Dockerfile.ncsa
@@ -1,19 +1,19 @@
-# Using the development toolchain
-FROM qserv/replica:dev
+# Using the Qserv development toolchain
+FROM qserv/qserv:deps_20200729_0234
 
 USER 0
 
-RUN mkdir -p /qserv/bin && \
-    mkdir -p /qserv/lib && \
-    mkdir -p /qserv/work && \
-    chown -R 1001:1001 /qserv
-
-USER 1001
+RUN mkdir -p /qserv/bin /qserv/lib
+RUN chown qserv /qserv/bin /qserv/lib
 
 # Copy applications and libraries into the container at
 # the destination folder
 ADD bin/* /qserv/bin/
 ADD lib/lib*.so* /qserv/lib/
 
-ENV LD_LIBRARY_PATH=${LD_LIBRARY_PATH}:/qserv/lib
-ENV PATH=${PATH}:/qserv/bin
+COPY bin/lsst /home/qserv
+
+USER 1000
+
+ENV PATH=/home/qserv:$PATH
+CMD ["lsst"]
