--- a/admin/templates/configuration/etc/xrdssi.cnf
+++ b/admin/templates/configuration/etc/xrdssi.cnf
@@ -28,8 +28,8 @@ location = {{QSERV_DATA_DIR}}/mysql
 [scheduler]
 
 # Thread pool size
-#thread_pool_size = 12
 thread_pool_size = 20
+max_pool_threads = 10000
 
 # Required number of completed tasks for table in a chunk for the average time to be valid
 # required_tasks_completed = 25
