Add IN2P3 TLS CA to Qserv's Docker image

--- a/admin/tools/docker/deps/Dockerfile
+++ b/admin/tools/docker/deps/Dockerfile
@@ -13,6 +13,8 @@ RUN groupadd qserv && \
     mkdir /qserv && \
     chown qserv:qserv /qserv
 
+COPY ca-trust/* /etc/pki/ca-trust/source/anchors/
+RUN update-ca-trust
 
 USER qserv
 
