--- a/admin/templates/configuration/etc/qserv-czar.cnf
+++ b/admin/templates/configuration/etc/qserv-czar.cnf
@@ -71,8 +71,7 @@ emptyChunkListFile = {{QSERV_DATA_DIR}}/qserv/emptyChunks.txt
 
 [tuning]
 #memoryEngine = yes
-#largeResultConcurrentMerges = 3
-largeResultConcurrentMerges = 6
+#interactiveChunkLimit = 10
 # xrootdCBThreadsInit must be less than xrootdCBThreadsMax
 xrootdCBThreadsMax = 500
 xrootdCBThreadsInit = 50
