Added code for testing.

--- a/admin/templates/configuration/etc/log4cxx.czar.properties
+++ b/admin/templates/configuration/etc/log4cxx.czar.properties
@@ -26,4 +26,6 @@ log4j.appender.FILE.layout.conversionPattern=%d{yyyy-MM-ddTHH:mm:ss.SSSZ} %X %-5
 #log4j.logger.lsst.qserv.qproc=DEBUG
 #log4j.logger.lsst.qserv.util=DEBUG
 #log4j.logger.lsst.qserv.qana=DEBUG
-log4j.logger.lsst.qserv.xrdssi.msgs=WARN
+#log4j.logger.lsst.qserv.xrdssi.msgs=WARN //&&&
+log4j.logger.lsst.qserv.xrdssi.msgs=DEBUG
+
