--- a/admin/templates/configuration/etc/log4cxx.worker.properties
+++ b/admin/templates/configuration/etc/log4cxx.worker.properties
@@ -9,4 +9,5 @@ log4j.appender.CONSOLE=org.apache.log4j.ConsoleAppender
 log4j.appender.CONSOLE.layout=org.apache.log4j.PatternLayout
 log4j.appender.CONSOLE.layout.ConversionPattern=[%d{yyyy-MM-ddTHH:mm:ss.SSSZ}] %X %-5p %c{2} (%F:%L) - %m%n
 
-log4j.logger.lsst.qserv.xrdssi.msgs=WARN
+#log4j.logger.lsst.qserv.xrdssi.msgs=WARN &&&
+log4j.logger.lsst.qserv.xrdssi.msgs=DEBUG
