Revert task-per-fragment and xrootd metadata
This commit reverts the effects of commits list below, in combination, chronologically.
DM-28750 and DM-2313 were the real targets here; others were entwined with these so
were pulled out for now collateraly:

  f0184b47 Merge branch 'tickets/DM-28750'
    "Subqueries may run after necessary tables are unlocked."

  ae320b11 Merge branch 'tickets/DM-24541'
    "Limits have been placed on how many the transmits the worker can be sending the czar.
     This should be changed to a limit to transmits to individual czars."

  b3462cc0 Merge branch 'tickets/DM-24861'
    "Add GetEndpoint() to log messages relating to workers and xrootd."

  260c93b7 Merge branch 'tickets/DM-2313'
    "Pass first protobuf header of xrootd response in xrootd meta"

  05d2669f Merge branch 'tickets/DM-29840'
    "Task::cancel() is not being called, which likely slows down query cancelation."

  1948dd97 Added log messages to indicate possible cause for crash

  6db25b55 Merge branch 'tickets/DM-30236'
    "Investigate system lockup"

  8c005081 Merge branch 'tickets/DM-30707'
    "TransmitLock decreses the transmitCount for interactive queries when it should not."

--- a/admin/templates/configuration/etc/xrdssi.cnf
+++ b/admin/templates/configuration/etc/xrdssi.cnf
@@ -78,5 +78,7 @@ reservedinteractivesqlconn = 20
 
 [transmits]
 # Maximum number of concurrent transmits to a czar.
-maxtransmits = 40
-
+maxtransmits = 50
+# If more than this number of large transmits is happening at once, wait to
+# start more transmits until some are done.
+maxalreadytransmitting = 10
