--- a/admin/templates/configuration/etc/log4cxx.czar.properties
+++ b/admin/templates/configuration/etc/log4cxx.czar.properties
@@ -3,7 +3,8 @@
 # used by Qserv-czar
 #
 
-log4j.rootLogger=INFO, CONSOLE
+#log4j.rootLogger=INFO, CONSOLE //&&&
+log4j.rootLogger=ERROR, CONSOLE
 
 # Use this appender to interlace xrootd debug messages with Qserv-czar standard
 # logs. stdout/stderr are redirected to {{QSERV_LOG_DIR}}/qserv-czar-console.log.
@@ -27,5 +28,5 @@ log4j.appender.FILE.layout.conversionPattern=%d{yyyy-MM-ddTHH:mm:ss.SSSZ} %X %-5
 #log4j.logger.lsst.qserv.util=DEBUG
 #log4j.logger.lsst.qserv.qana=DEBUG
 #log4j.logger.lsst.qserv.xrdssi.msgs=WARN //&&&
-log4j.logger.lsst.qserv.xrdssi.msgs=DEBUG
+log4j.logger.lsst.qserv.xrdssi.msgs=ERROR
 
