--- a/admin/templates/configuration/etc/log4cxx.worker.properties
+++ b/admin/templates/configuration/etc/log4cxx.worker.properties
@@ -2,7 +2,8 @@
 # Configuration file for log4cxx
 #
 
-log4j.rootLogger=DEBUG, CONSOLE
+#log4j.rootLogger=DEBUG, CONSOLE //&&&
+log4j.rootLogger=ERROR, CONSOLE 
 
 # Appender for xrootd log file
 log4j.appender.CONSOLE=org.apache.log4j.ConsoleAppender
@@ -10,4 +11,4 @@ log4j.appender.CONSOLE.layout=org.apache.log4j.PatternLayout
 log4j.appender.CONSOLE.layout.ConversionPattern=[%d{yyyy-MM-ddTHH:mm:ss.SSSZ}] %X %-5p %c{2} (%F:%L) - %m%n
 
 #log4j.logger.lsst.qserv.xrdssi.msgs=WARN &&&
-log4j.logger.lsst.qserv.xrdssi.msgs=DEBUG
+log4j.logger.lsst.qserv.xrdssi.msgs=ERROR
