--- a/admin/templates/configuration/etc/qserv-czar.cnf
+++ b/admin/templates/configuration/etc/qserv-czar.cnf
@@ -111,14 +111,16 @@ queryDistributionTestVer = 0
 # Please see qdisp/QdispPool.h QdispPool::QdispPool for more information
 [qdisppool]
 #size of the pool
-poolSize = 50
+#poolSize = 50
+poolSize = 800
 # Low numbers are higher priority. Largest priority 3 creates 4 priority queues 0, 1, 2, 3
 #     Must be greater than 0.
 largestPriority = 3
 # Maximum number of threads running for each queue. No spaces. Values separated by ':'
 #   Using largestPriority = 2  and   vectRunsizes = 3:5:8
 #    queue 0 would have runSize 3, queue 1 would have runSize 5, and queue 2 would have runSize 8.    
-vectRunSizes = 50:50:50:50
+#vectRunSizes = 50:50:50:50
+vectRunSizes = 50:50:800:800
 # Minimum number of threads running for each queue. No spaces. Values separated by ':'
 vectMinRunningSizes = 0:1:3:3
 
