--- a/admin/templates/configuration/etc/xrdssi.cnf
+++ b/admin/templates/configuration/etc/xrdssi.cnf
@@ -77,6 +77,8 @@ maxsqlconn = 800
 reservedinteractivesqlconn = 20
 
 [transmits]
+# Maximum number of gigabytes to be used by all StreamBuffer instances.
+buffermaxtotalgb = 50
 # Maximum number of concurrent transmits to a czar.
 maxtransmits = 50
 # If more than this number of large transmits is happening at once, wait to
