Added code to allow a few tasks to transmit per QID.

--- a/admin/templates/configuration/etc/xrdssi.cnf
+++ b/admin/templates/configuration/etc/xrdssi.cnf
@@ -81,4 +81,5 @@ reservedinteractivesqlconn = 20
 buffermaxtotalgb = 50
 # Maximum number of concurrent transmits to a czar.
 maxtransmits = 10
+maxperqid = 3
 
