--- a/src/admin/CMakeLists.txt
+++ b/src/admin/CMakeLists.txt
@@ -1,4 +1,4 @@
-install(DIRECTORY python/ DESTINATION ${CMAKE_INSTALL_PREFIX}/python/lsst/qserv/admin)
+install(DIRECTORY python/lsst/qserv/admin DESTINATION ${CMAKE_INSTALL_PREFIX}/python/lsst/qserv)
 install(FILES bin/entrypoint DESTINATION ${CMAKE_INSTALL_BINDIR} PERMISSIONS OWNER_READ OWNER_EXECUTE WORLD_READ WORLD_EXECUTE)
 install(DIRECTORY schema/ DESTINATION ${CMAKE_INSTALL_PREFIX}/qserv/smig/admin/schema/)
 install(DIRECTORY etc/ DESTINATION ${CMAKE_INSTALL_PREFIX}/etc FILE_PERMISSIONS OWNER_READ OWNER_WRITE WORLD_READ WORLD_WRITE)
