improve log level option parsing

--- a/src/admin/CMakeLists.txt
+++ b/src/admin/CMakeLists.txt
@@ -38,3 +38,8 @@ add_test(NAME test_options_file_option
   COMMAND python3 -m unittest tests.admin.test_optionsFileOption
   WORKING_DIRECTORY ${CMAKE_INSTALL_PREFIX}/python/
 )
+
+add_test(NAME test_qserv_log
+  COMMAND python3 -m unittest tests.admin.test_qserv_log
+  WORKING_DIRECTORY ${CMAKE_INSTALL_PREFIX}/python/
+)
