remove the db submodule

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,10 +11,9 @@ enable_testing()
 include(GNUInstallDirs)
 set(CMAKE_INSTALL_PREFIX ${PROJECT_BINARY_DIR}/install)
 
-# utils iw Python-only, so just install with pip instead of embedded cmake 
+# utils is Python-only, so just install with pip instead of embedded cmake
 install(CODE "execute_process(COMMAND pip3 install ${CMAKE_CURRENT_SOURCE_DIR}/extern/utils -t ${CMAKE_INSTALL_PREFIX}/python --no-deps --no-compile)")
 
-add_subdirectory(extern/db)
 add_subdirectory(extern/log)
 add_subdirectory(extern/partition)
 add_subdirectory(extern/sphgeom)
@@ -23,6 +22,6 @@ add_subdirectory(src)
 
 # TODO do we want to add cmake capability to the qserv_web project?
 install(
-    DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/extern/qserv_web/www 
+    DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/extern/qserv_web/www
     DESTINATION ${CMAKE_INSTALL_PREFIX}/qserv/dashboard
 )
