Fixed merge issues.

--- a/src/wbase/CMakeLists.txt
+++ b/src/wbase/CMakeLists.txt
@@ -4,7 +4,9 @@ add_dependencies(wbase proto)
 target_sources(wbase PRIVATE
     Base.cc
     SendChannel.cc
+    SendChannelShared.cc
     Task.cc
+    TransmitData.cc
     WorkerCommand.cc
 )
 
