--- a/.github/workflows/doc.yml
+++ b/.github/workflows/doc.yml
@@ -1,17 +1,40 @@
-# Qserv CI workflow
-# FIXME: Github action runner are too weak to run e2e tests
----
 name: "Documentation"
+
 on:
   push:
+
 jobs:
   doc:
     name: Generate and upload documentation
-    runs-on: ubuntu-18.04
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v2
-      - name: Generate and upload documentation
-        run: |
-          curl -fsSL https://raw.githubusercontent.com/lsst-dm/doc-container/master/run.sh | bash -s -- -p "${{ secrets.LTD_PASSWORD }}"  -u "${{ secrets.LTD_USERNAME }}" "$PWD"
+    runs-on: ubuntu-latest
+    defaults:
+      run:
+        working-directory: doc
 
+    steps:
+      - uses: actions/checkout@v2
+
+      - name: Set up Python
+        uses: actions/setup-python@v2
+        with:
+          python-version: "3.10"
+
+      - name: Install Python dependencies
+        run: |
+          pip install --upgrade pip
+          pip install -r requirements.txt
+          pip install ltd-conveyor
+
+      - name: Check links
+        run: |
+          make linkcheck
+
+      - name: Build docs
+        run: |
+          make html
+
+      - name: Upload docs
+        env:
+          LTD_USERNAME: ${{ secrets.LTD_USERNAME }}
+          LTD_PASSWORD: ${{ secrets.LTD_PASSWORD }}
+        run: ltd upload --product qserv --gh --dir _build/html
