--- a/.github/workflows/doc.yml
+++ b/.github/workflows/doc.yml
@@ -7,9 +7,6 @@ jobs:
   doc:
     name: Generate and upload documentation
     runs-on: ubuntu-latest
-    defaults:
-      run:
-        working-directory: doc
 
     steps:
       - uses: actions/checkout@v2
@@ -22,19 +19,30 @@ jobs:
       - name: Install Python dependencies
         run: |
           pip install --upgrade pip
-          pip install -r requirements.txt
-          pip install ltd-conveyor
+          pip install \
+            documenteer \
+            ltd-conveyor \
+            sphinx-rtd-theme
+
+      - name: Install Cmake
+        run: sudo apt-get install -y cmake
+
+      - name: Configure
+        run: |
+          mkdir build
+          cd build
+          cmake ..
 
       - name: Check links
         run: |
-          make linkcheck
+          make docs-linkcheck
 
       - name: Build docs
         run: |
-          make html
+          make docs-html
 
       - name: Upload docs
         env:
           LTD_USERNAME: ${{ secrets.LTD_USERNAME }}
           LTD_PASSWORD: ${{ secrets.LTD_PASSWORD }}
-        run: ltd upload --product qserv --gh --dir _build/html
+        run: ltd upload --product qserv --gh --dir build/doc/html
