--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,7 +1,6 @@
 cmake_minimum_required(VERSION 3.12)
 
 project(Qserv
-    VERSION 0.8
     DESCRIPTION "The Qserv distributed parallel database"
     LANGUAGES CXX
 )
@@ -11,12 +10,12 @@ enable_testing()
 include(GNUInstallDirs)
 set(CMAKE_INSTALL_PREFIX ${PROJECT_BINARY_DIR}/install)
 
-# utils is Python-only, so just install with pip instead of embedded cmake
-install(CODE "execute_process(COMMAND pip3 install ${CMAKE_CURRENT_SOURCE_DIR}/extern/utils -t ${CMAKE_INSTALL_PREFIX}/python --no-deps --no-compile)")
-
+add_subdirectory(doc)
 add_subdirectory(extern/log)
 add_subdirectory(extern/partition)
 add_subdirectory(extern/qserv_web)
 add_subdirectory(extern/sphgeom)
-
 add_subdirectory(src)
+
+# utils is Python-only, so just install with pip instead of embedded cmake
+install(CODE "execute_process(COMMAND pip3 install ${CMAKE_CURRENT_SOURCE_DIR}/extern/utils -t ${CMAKE_INSTALL_PREFIX}/python --no-deps --no-compile)")
