--- a/doc/conf.py.in
+++ b/doc/conf.py.in
@@ -3,8 +3,6 @@
 import os
 import sys
 
-import lsst_sphinx_bootstrap_theme
-
 # -- General configuration ----------------------------------------------------
 
 # Add any Sphinx extension module names here, as strings. They can be
@@ -19,7 +17,6 @@ extensions = [
 source_suffix = ".rst"
 
 root_doc = "index"
-master_doc = "index"  # deprecated in 4.0
 
 project = "Qserv"
 
@@ -29,11 +26,9 @@ copyright = ""
 author = "Rubin Observatory"
 
 # The version info for the project you're documenting, acts as replacement for
-# |version| and |release|, also used in various other places throughout the
-# built documents.
-# TODO either set these manually here, or extract from e.g. env variables.
+# |version|
+# TODO either set this manually here, or extract from e.g. env variables.
 version = "X.Y.Z"
-release = "X.Y.Z"
 
 # List of patterns, relative to source directory, that match files and
 # directories to ignore when looking for source files.
@@ -41,14 +36,6 @@ exclude_patterns = ["_build", "Makefile"]
 
 # The reST default role cross-links Python (used for this markup: `text`)
 default_role = "py:obj"
-
-# -- ReStructuredText epilog for common links/substitutions ---------------
-
-rst_epilog = """
-
-.. _conda-forge: https://conda-forge.org
-.. _conda: https://conda.io/en/latest/index.html
-"""
 
 # -- Options for linkcheck builder --------------------------------------------
 
@@ -65,11 +52,7 @@ linkcheck_ignore = [
 
 # -- Options for html builder -------------------------------------------------
 
-templates_path = [
-    lsst_sphinx_bootstrap_theme.get_html_templates_path(),
-]
-html_theme = "lsst_sphinx_bootstrap_theme"
-html_theme_path = [lsst_sphinx_bootstrap_theme.get_html_theme_path()]
+html_theme = "sphinx_rtd_theme"
 
 # Variables available for Jinja templates
 html_context = {}
@@ -77,7 +60,7 @@ html_context = {}
 # Theme options are theme-specific and customize the look and feel of a theme
 # further.  For a list of options available for each theme, see the
 # documentation.
-html_theme_options = {"logotext": project}
+html_theme_options = {}
 
 # The name for this set of Sphinx documents.  If unset, it defaults to
 # "<project> v<release> documentation".
@@ -89,7 +72,7 @@ html_short_title = "Qserv"
 # Add any paths that contain custom static files (such as style sheets) here,
 # relative to this directory. They are copied after the builtin static files,
 # so a file named "default.css" will overwrite the builtin "default.css".
-html_static_path = ["_static"]
+# html_static_path = ["_static"]
 
 # If true, links to the reST sources are added to the pages.
 html_show_sourcelink = False
