--- a/src/replica/CMakeLists.txt
+++ b/src/replica/CMakeLists.txt
@@ -495,6 +495,7 @@ replica_tests(
     testChunkLocker
     testChunkNumber
     testChunkedTable
+    testCommonStr
     testConnectionParams
     testCsv
     testFileIngestApp
