Moved PseudoFifo to its own files and added config entries.

--- a/src/qdisp/CMakeLists.txt
+++ b/src/qdisp/CMakeLists.txt
@@ -8,6 +8,7 @@ target_sources(qdisp PRIVATE
     JobQuery.cc
     JobStatus.cc
     MessageStore.cc
+    PseudoFifo.cc
     QdispPool.cc
     QueryRequest.cc
     XrdSsiMocks.cc
