Implemented the worker redirector (registration) server
The service is implemented as the HTTP REST server responding
to the worker registration ("login"), management (removing workers)
and information (obtaining a collection of registered work services).
No siginificant worker validation will be made by the server. Worker info
will be passed to the Master Replicaton Controller for further validation
and configuring the the Replication/Ingest system.

In the current implementation the service runs as a separate application
process.

--- a/src/replica/CMakeLists.txt
+++ b/src/replica/CMakeLists.txt
@@ -267,6 +267,14 @@ target_sources(replica PRIVATE
     RebalanceApp.h
     RebalanceJob.cc
     RebalanceJob.h
+    RedirectorHttpApp.h
+    RedirectorHttpApp.cc
+    RedirectorHttpSvc.h
+    RedirectorHttpSvc.cc
+    RedirectorHttpSvcMod.h
+    RedirectorHttpSvcMod.cc
+    RedirectorWorkers.h
+    RedirectorWorkers.cc
     RemoveReplicaQservMgtRequest.cc
     RemoveReplicaQservMgtRequest.h
     ReplicaInfo.cc
@@ -467,6 +475,7 @@ replica_utils(
     qserv-replica-file
     qserv-replica-job
     qserv-replica-master-http
+    qserv-replica-redirector
     qserv-replica-test
     qserv-replica-worker-notify
     qserv-replica-worker
